--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "sass": "^1.86.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
